--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li>Email: Dragom4lek@gmail.com</li>
     </ul>
 
-    <p>Soy un apasionado por la tecnologia, musico y proximamente programador full stack.</p>
+    <p>Soy un apasionado por la tecnologia, musico y proximamente programador.</p>
     
     <p>Actualmente vivo en Lujan provincia de Buenos Aires</p>
 
